syntax = "proto3";

package notify.api.notify.channel.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "notify.api.notify.channel.v1";
option java_outer_classname = "ChannelV1";
 
import "api/notify/channel/notify_channel.proto";
import "google/api/annotations.proto";

service Channel{
  // ListChannelType 获取发送渠道可用列表
  rpc ListChannelType (ListChannelTypeRequest) returns (ListChannelTypeReply) {
    option (google.api.http) = {
      get: "/notify/api/v1/channel/types",
    };
  }

  // ListChannel 获取发送渠道列表
  rpc ListChannel (ListChannelRequest) returns (ListChannelReply) {
    option (google.api.http) = {
      get: "/notify/api/v1/channels",
    };
  }

  // CreateChannel 创建发送渠道
  rpc CreateChannel (CreateChannelRequest) returns (CreateChannelReply) {
    option (google.api.http) = {
      post: "/notify/api/v1/channel",
      body: "*"
    };
  }

  // UpdateChannel 更新发送渠道
  rpc UpdateChannel (UpdateChannelRequest) returns (UpdateChannelReply) {
    option (google.api.http) = {
      put: "/notify/api/v1/channel",
      body: "*"
    };
  }

  // DeleteChannel 删除发送渠道
  rpc DeleteChannel (DeleteChannelRequest) returns (DeleteChannelReply) {
    option (google.api.http) = {
      delete: "/notify/api/v1/channel",
    };
  }

  // ListOfficialTemplate 获取公众号模板
  rpc ListOfficialTemplate (ListOfficialTemplateRequest) returns (ListOfficialTemplateReply) {
    option (google.api.http) = {
      get: "/notify/api/v1/channel/official_template",
    };
  }
}